--- a/index.html
+++ b/index.html
@@ -1,46 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Galaxy Runner: Ultimate Chaos</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Galaxy Runner</title>
 <link rel="stylesheet" href="style.css">
 <link rel="manifest" href="manifest.json">
 </head>
 <body>
 <canvas id="game"></canvas>
-<div id="ui"></div>
-<div id="toast"></div>
-<button id="settingsBtn">SETTINGS</button>
-<div id="settingsPanel">
-<label>Music: <input type="checkbox" id="musicToggle" checked></label><br>
-<label>Sound: <input type="checkbox" id="soundToggle" checked></label><br>
-<label>Volume: <input type="range" id="volumeSlider" min="0" max="1" step="0.05" value="0.3"></label><br>
-<label>Difficulty:
-<select id="difficulty">
-<option value="easy">Easy</option>
-<option value="normal" selected>Normal</option>
-<option value="hard">Hard</option>
-<option value="insane">INSANE</option>
-</select></label><br>
-<label>Controls:
-<select id="controlType">
-<option value="keyboard">Keyboard</option>
-<option value="mobile">Mobile</option>
-</select></label><br>
-<button id="closeSettings">CLOSE</button>
+
+<!-- UI -->
+<div id="ui">
+  <div id="score">Score: 0</div>
+  <div id="lives">Lives: 3</div>
+  <div id="highscore">High: 0</div>
 </div>
-<div id="mobileControls">
-<button id="upBtn">↑</button>
-<button id="leftBtn">←</button>
-<button id="downBtn">↓</button>
-<button id="rightBtn">→</button>
-<button id="fireBtn">FIRE</button>
-<button id="specialBtn">⚡</button>
+
+<!-- Toast -->
+<div id="toast" class="hidden"></div>
+
+<!-- Settings -->
+<button id="settingsBtn" class="small">⚙</button>
+<div id="settingsPanel" class="panel hidden">
+  <h3>Settings</h3>
+  <label><input type="checkbox" id="musicToggle" checked> Music</label><br>
+  <label><input type="checkbox" id="sfxToggle" checked> Sound Effects</label><br>
+  <label>Volume: <input id="volume" type="range" min="0" max="1" step="0.05" value="0.35"></label><br>
+  <label>Difficulty:
+    <select id="difficulty">
+      <option value="easy">Easy</option>
+      <option value="normal" selected>Normal</option>
+      <option value="hard">Hard</option>
+      <option value="insane">INSANE</option>
+    </select>
+  </label><br>
+  <label>Controls:
+    <select id="controlMode">
+      <option value="auto">Auto (desktop detect)</option>
+      <option value="keyboard">Keyboard (WASD / Arrows)</option>
+      <option value="mobile">Mobile (on-screen)</option>
+    </select>
+  </label><br>
+  <button id="closeSettings" class="small">Close</button>
 </div>
+
+<!-- Mobile Controls -->
+<div id="mobileControls" class="hidden">
+  <div id="dpad">
+    <button id="up" class="dpad">↑</button><br>
+    <button id="left" class="dpad">←</button>
+    <button id="down" class="dpad">↓</button>
+    <button id="right" class="dpad">→</button>
+  </div>
+  <div id="mobileActions">
+    <button id="btnFire" class="action">FIRE</button>
+    <button id="btnSpecial" class="action">⚡</button>
+  </div>
+</div>
+
+<!-- Title / Overlays -->
+<div id="overlay" class="overlay">
+  <div id="titleScreen" class="screen">
+    <h1>GALAXY RUNNER</h1>
+    <p id="subtitle">Ultimate Chaos Edition</p>
+    <p id="pressStart">PRESS ENTER or TAP TO START</p>
+    <p id="showHigh">High Score: 0</p>
+  </div>
+
+  <div id="countdownScreen" class="screen hidden">
+    <p id="countdownBig">3</p>
+  </div>
+
+  <div id="gameOverScreen" class="screen hidden">
+    <h2>GAME OVER</h2>
+    <p id="finalScore">Score: 0</p>
+    <button id="playAgain">Play Again</button>
+  </div>
+</div>
+
 <script src="game.js"></script>
-<script>
-if('serviceWorker' in navigator){navigator.serviceWorker.register('sw.js');}
-</script>
 </body>
 </html>
